# eugene

./: .gitattributes  .gitignore  .gitmodules  .tool-versions  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  build_doc.sh  docker-compose.yml  mise.toml  setup_docs.sh
.github/workflows/: build_eugene_web.yml  build_release.yml  hugo_docs.yml  (+7 more)
db-initscripts/: init-testdb.sql
docs/: README.md  book.toml  hugo.toml
eugene/: Cargo.toml
eugene-web/: Cargo.toml  Dockerfile
eugene-web/src/: lib.rs  parse_scripts.rs  webapp.rs
eugene-web/src/webapp/: error.rs  index.rs  lint_html.rs  lint_json.rs  lint_raw.rs  requestlog.rs  templates.rs
eugene-web/src/webapp/templates/: base.hbs  index.hbs  lint.hbs
eugene/docs/: book.toml
eugene/docs/src/: 404.md  SUMMARY.md  actions.md  gitlab.md  ignores.md  introduction.md  lint.md  trace.md  web.md
eugene/docs/src/hints/: examples.md
eugene/docs/src/hints/E1/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E10/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E11/: index.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E15/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E2/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E3/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E4/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E5/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E6/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E7/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E8/: index.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/E9/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/W12/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/W13/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/hints/W14/: index.md  safer_lint.md  safer_trace.md  unsafe_lint.md  unsafe_trace.md
eugene/docs/src/shell_output/: help  lint  trace
eugene/docs/theme/: custom.css  head.hbs
eugene/examples/E1/: bad.sql  good.sql
eugene/examples/E1/bad/: 2.sql
eugene/examples/E10/: bad.sql  good.sql
eugene/examples/E10/bad/: 1.sql  2.sql
eugene/examples/E10/good/: 2.sql  3.sql
eugene/examples/E11/: bad.sql
eugene/examples/E11/bad/: 2.sql
eugene/examples/E15/: bad.sql  good.sql
eugene/examples/E2/: bad.sql  good.sql
eugene/examples/E2/bad/: 2.sql
eugene/examples/E2/good/: 2.sql  4.sql
eugene/examples/E3/: bad.sql  good.sql
eugene/examples/E3/bad/: 1.sql
eugene/examples/E3/good/: 1.sql
eugene/examples/E4/: bad.sql  good.sql
eugene/examples/E4/bad/: 2.sql
eugene/examples/E4/good/: 2.sql
eugene/examples/E5/: bad.sql  good.sql
eugene/examples/E5/bad/: 2.sql
eugene/examples/E5/good/: 1.sql  2.sql  3.sql
eugene/examples/E6/: bad.sql  good.sql
eugene/examples/E6/bad/: 1.sql
eugene/examples/E7/: bad.sql  good.sql
eugene/examples/E7/bad/: 1.sql
eugene/examples/E7/good/: 2.sql
eugene/examples/E8/: bad.sql
eugene/examples/E8/bad/: 2.sql
eugene/examples/E9/: bad.sql  good.sql
eugene/examples/E9/bad/: 2.sql
eugene/examples/W12/: bad.sql  good.sql
eugene/examples/W12/bad/: 2.sql
eugene/examples/W12/good/: 2.sql
eugene/examples/W13/: bad.sql  good.sql
eugene/examples/W13/bad/: 1.sql
eugene/examples/W13/good/: 1.sql
eugene/examples/W14/: bad.sql  good.sql
eugene/examples/demo/: V1_1__create.sql  V1_2__set_title_not_null.sql  V2_1__create_authors.sql
eugene/examples/snapshots/: extra_locks.md  summary.md
eugene/src/: comments.rs  doc_summary.md.hbs  error.rs  git.rs  hint_data.rs  hints.rs  lib.rs  lints.rs  output.rs  parse_scripts.rs  pg_types.rs  pgpass.rs  render_doc_snapshots.rs  script_discovery.rs  sqltext.rs  tempserver.rs  tracing.rs
eugene/src/lints/: ast.rs  rules.rs
eugene/src/output/: lint_report.md.hbs  locks_table.md.hbs  output_format.rs  templates.rs  trace_report.md.hbs
eugene/src/pg_types/: contype.rs  lock_modes.rs  relkinds.rs
eugene/src/tracing/: queries.rs  tracer.rs
eugene/tests/: snapshot_cli_help.rs
examples/: add_authors-lints.md  add_authors.md  add_authors.sql  add_authors_lints.md  add_authors_traced.md  add_check_constraint.md  add_check_constraint.sql  add_check_constraint_lints.md  add_check_constraint_traced.md  add_exclusion_constraint.md  add_exclusion_constraint.sql  add_exclusion_constraint_lints.md  add_exclusion_constraint_traced.md  add_not_valid_fkey-lints.md  add_not_valid_fkey.md  add_not_valid_fkey.sql  add_not_valid_fkey_lints.md  add_not_valid_fkey_traced.md  alter_column_not_null.md  alter_column_not_null.sql  alter_column_not_null_lints.md  alter_column_not_null_traced.md  alter_column_unique-lints.md  alter_column_unique.md  alter_column_unique.sql  alter_column_unique_lints.md  create_books.sql  create_index_concurrently-lints.md  create_index_concurrently-traced.md  create_index_concurrently.md  create_index_concurrently.sql  create_index_concurrently_lints.md  index_books.md  index_books.sql  index_books_lints.md  index_books_traced.md  widen_type-lints.md  widen_type.md  widen_type.sql  widen_type_traced.md
src/: comments.rs  field_selection.rs  hint_data.rs  hint_page.md.hbs  hints.rs  lib.rs  lints.rs  lock_modes.rs  locks.rs  main.rs  output.rs  pg_types.rs  pgpass.rs  relkinds.rs  render_doc_snapshots.rs  render_lint_examples.rs  script_discovery.rs  sqltext.rs  tempserver.rs  tracer.rs  tracing.rs
tests/: snapshot_cli_help.rs  snapshots.rs
(+351 files in other folders)
