[package]
name = "eugene"
version = "0.3.4"
edition = "2021"
description = "Careful with That Lock, Eugene"

license = "MIT"
authors = ["Robin Kåveland <kaaveland@gmail.com>"]
homepage = "https://kaveland.no/eugene"
repository = "https://github.com/kaaveland/eugene.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
anyhow = "1.0.82"
regex = "1.5.4"
clap = { version = "4.5.4", features = ["derive"]}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.38"
itertools = "0.12.1"
pg_query = "5.1.0"
handlebars = "5.1.2"
once_cell = "1.19.0"
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
rayon = "1.10.0"

[dev-dependencies.uuid]
version = "1.8.0"
features = ["v4"]
