[workspace]

members = ["eugene"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
description = "Careful with That Lock, Eugene"

license = "MIT"
authors = ["Robin Kåveland <kaaveland@gmail.com>"]
homepage = "https://kaveland.no/eugene"
repository = "https://github.com/kaaveland/eugene.git"

