[workspace]

members = ["eugene", "eugene-web"]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2021"
description = "Careful with That Lock, Eugene"
categories = [
    "development-tools"
]
keywords = [
    "postgres", "postgresql", "migrations", "locking", "devtools"
]

license = "MIT"
authors = ["Robin Kåveland <kaaveland@gmail.com>"]
homepage = "https://kaveland.no/eugene"
repository = "https://github.com/kaaveland/eugene.git"

