[package]
name = "eugene-web"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
handlebars = "5.1.2"
log = { version = "0.4.21", features = ["kv"] }
nom = "7.1.3"
once_cell = "1.19.0"
pg_query = "6.0.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.axum]
version = "0.7.5"
features = ["http2", "multipart"]

[dependencies.eugene]
path = "../eugene"

[dev-dependencies]
pretty_assertions = "1.4.0"
