[package]
name = "eugene-web"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
handlebars = "6.3.2"
log = { version = "0.4.27", features = ["kv"] }
once_cell = "1.21.3"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.axum]
version = "0.8.3"
features = ["http2", "multipart"]

[dependencies.eugene]
path = "../eugene"

[dev-dependencies]
pretty_assertions = "1.4.1"
