[package]
name = "eugene"
publish = true

edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
postgres = "0.19.7"
anyhow = "1.0.82"
regex = "1.5.4"
clap = { version = "4.5.4", features = ["derive"]}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.38"
itertools = "0.12.1"
pg_query = "5.1.0"
handlebars = "5.1.2"
once_cell = "1.19.0"
nom = "7.1.3"
clap_complete = "4.5.2"
log = { version = "0.4.21", features = ["kv"] }
env_logger = "0.11.3"
tempfile = "3.10.1"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
rayon = "1.10.0"

[dev-dependencies.uuid]
version = "1.8.0"
features = ["v4"]
