[package]
name = "eugene"
publish = true
readme = "../README.md"

edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
postgres = "0.19.10"
regex = "1.11.1"
clap = { version = "4.5.36", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
itertools = "0.12.1"
pg_query = "6.1.0"
handlebars = "5.1.2"
once_cell = "1.21.3"
nom = "7.1.3"
clap_complete = "4.5.47"
log = { version = "0.4.27", features = ["kv"] }
env_logger = "0.11.8"
tempfile = "3.19.1"
rand = "0.8.5"
anyhow = "1.0.98"
fxhash = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rayon = "1.10.0"

[dev-dependencies.uuid]
version = "1.16.0"
features = ["v4"]
